去掉执行依赖
之前依赖ppear，现在通过pptools font -u 更新文字库。方便后期扩展

--- a/pptools-icon/package.json
+++ b/pptools-icon/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pptools-font",
-  "version": "0.3.2",
+  "name": "pptools",
+  "version": "0.1.0",
   "description": "A tool for ppzuche to update font files",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "npm",
     "font"
   ],
+  "bin": {"pptools":"index.js"},
   "author": "Liu Cong",
   "license": "ISC",
   "bugs": {
